--- a/index.html
+++ b/index.html
@@ -4,233 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, var(--tg-theme-bg-color, #667eea 0%), var(--tg-theme-secondary-bg-color, #764ba2 100%));
-            color: var(--tg-theme-text-color, #000);
-            min-height: 100vh;
-            padding: 20px;
-            overflow-x: hidden;
-        }
-
-        .header {
-            text-align: center;
-            margin: 30px 0 40px;
-            background: rgba(255,255,255,0.1);
-            backdrop-filter: blur(10px);
-            padding: 25px;
-            border-radius: 25px;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.1);
-        }
-
-        h1 {
-            font-size: 28px;
-            font-weight: 800;
-            background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            margin-bottom: 10px;
-        }
-
-        .subtitle {
-            color: rgba(255,255,255,0.9);
-            font-size: 16px;
-        }
-
-        #search {
-            width: 100%;
-            padding: 20px 25px;
-            font-size: 18px;
-            border: none;
-            border-radius: 25px;
-            background: rgba(255,255,255,0.95);
-            backdrop-filter: blur(20px);
-            box-shadow: 0 8px 32px rgba(0,0,0,0.1);
-            margin-bottom: 30px;
-            transition: all 0.3s ease;
-            outline: none;
-        }
-
-        #search:focus {
-            transform: scale(1.02);
-            box-shadow: 0 12px 40px rgba(0,0,0,0.15);
-        }
-
-        #search::placeholder {
-            color: #999;
-            font-weight: 500;
-        }
-
-        #results { display: flex; flex-wrap: wrap; gap: 20px; padding: 20px 0; }
-
-        .video-card {
-            width: 170px;
-            cursor: pointer;
-            border-radius: 20px;
-            overflow: hidden;
-            background: rgba(255,255,255,0.95);
-            backdrop-filter: blur(15px);
-            box-shadow: 0 10px 40px rgba(0,0,0,0.2);
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            position: relative;
-        }
-
-        .video-card:hover {
-            transform: translateY(-10px) scale(1.05);
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-        }
-
-        .video-thumbnail {
-            width: 100%;
-            height: 110px;
-            object-fit: cover;
-            position: relative;
-        }
-
-        .play-overlay {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 50px;
-            height: 50px;
-            background: rgba(255,255,255,0.9);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 20px;
-            opacity: 0;
-            transition: all 0.3s ease;
-        }
-
-        .video-card:hover .play-overlay { opacity: 1; transform: translate(-50%, -50%) scale(1.1); }
-
-        .video-title {
-            padding: 15px;
-            font-size: 14px;
-            font-weight: 600;
-            line-height: 1.4;
-            height: 70px;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-        }
-
-        #player {
-            width: 100%;
-            height: 55vh;
-            border: none;
-            border-radius: 25px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            display: none;
-            margin-top: 20px;
-        }
-
-        .back-btn {
-            position: fixed;
-            top: 25px;
-            left: 25px;
-            background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
-            color: white;
-            border: none;
-            padding: 15px 25px;
-            border-radius: 30px;
-            cursor: pointer;
-            font-weight: 700;
-            font-size: 16px;
-            box-shadow: 0 8px 25px rgba(255,107,107,0.4);
-            transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
-        }
-
-        .back-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 12px 35px rgba(255,107,107,0.6);
-        }
-
-        .loading {
-            text-align: center;
-            padding: 60px 20px;
-            color: rgba(255,255,255,0.9);
-            font-size: 18px;
-            font-weight: 500;
-        }
-
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .video-card {
-            animation: fadeInUp 0.6s ease forwards;
-        }
-
-        .video-card:nth-child(1) { animation-delay: 0.1s; }
-        .video-card:nth-child(2) { animation-delay: 0.2s; }
-        .video-card:nth-child(3) { animation-delay: 0.3s; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<button class="back-btn" onclick="backToSearch()" style="display:none;">🔍 Новый поиск</button>
+<button class="back-btn" onclick="backToSearch()" style="display:none;">← Назад</button>
 
 <div class="header">
     <h1>YouTube без VPN</h1>
-    <div class="subtitle">Работает в Telegram в России</div>
+    <div class="subtitle">Популярные видео в Telegram</div>
 </div>
 
-<input id="search" placeholder="🔍 Введите название видео..." />
+<input id="search" placeholder="Введите название видео..." />
 
-<div id="results" style="display:none;"></div>
+<div id="results"></div>
 <iframe id="player" allowfullscreen></iframe>
 
-<script>
-    const tg = window.Telegram.WebApp;
-    tg.ready();
-    tg.expand();
-    tg.MainButton.setText('⭐ Поделиться').show().onClick(() => tg.shareUrl(window.location.href));
-
-    const searchEl = document.getElementById('search');
-    const resultsEl = document.getElementById('results');
-    const playerEl = document.getElementById('player');
-    const backBtn = document.querySelector('.back-btn');
-
-    searchEl.addEventListener('keypress', handleSearch);
-    searchEl.focus();
-
-    function handleSearch(e) {
-        if (e.key === 'Enter') {
-            const query = searchEl.value.trim();
-            if (!query) return;
-
-            resultsEl.innerHTML = '<div class="loading">Поиск видео...</div>';
-            resultsEl.style.display = 'block';
-            searchEl.blur();
-
-            // Популярные видео + iframe поиск
-            setTimeout(() => {
-                resultsEl.innerHTML = `
-                    <div class="loading">Открыть поиск:</div>
-                    <iframe width="100%" height="450"
-                        src="https://yewtu.be/search?q=${encodeURIComponent(query)}"
-                        frameborder="0" allowfullscreen style="border-radius: 20px;">
-                    </iframe>`;
-            }, 1000);
-        }
-    }
-
-    function backToSearch() {
-        playerEl.style.display = 'none';
-        resultsEl.style.display = 'none';
-        searchEl.style.display = 'block';
-        searchEl.value = '';
-        searchEl.focus();
-        backBtn.style.display = 'none';
-    }
-</script>
+<script src="app.js"></script>
 </body>
 </html>
